<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>occupancy_grid_parser</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tambevineet@gmail.com">vrex</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <export>
    <costmap_2d plugin="${prefix}/grid_parser_plugin.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
